# first-3-minutes

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a3c19dcb9e26_add_building_scan_anchor_guest_session.py  b1f2e3d4c5a6_add_floor_plan_metadata.py  c2e3f4a5b6c7_add_used_ar_to_guest_drill_sessions.py
backend/app/: main.py
backend/app/api/v1/: admin.py  building.py  drill.py  guest.py  location.py  resident.py  scan.py
backend/app/core/: config.py  database.py  errors.py  time.py
backend/app/fixtures/: reset.py  seed.py
backend/app/models/: __init__.py  building.py  building_scan.py  compliance_report.py  device_profile.py  drill.py  drill_metrics.py  floor_plan.py  location.py  organization.py  qr_token.py  reward_issuance.py  spatial_map.py  spatial_scan.py
backend/app/schemas/: admin.py  building.py  common.py  drill.py  guest.py  resident.py  spatial.py
backend/app/services/: admin.py  compliance.py  floor_plan_renderer.py  qr.py  rating.py  resident.py  spatial_ai.py  storage.py
backend/scripts/: generate_floor_plan.py
backend/tests/: conftest.py  test_contracts.py  test_domain3_api.py  test_health.py  test_openapi.py  test_rating.py  test_spatial_service.py
frontend/admin-portal/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/guest-webar/: index.html  package.json  (+2 more)
prompts/: README.md
scripts/: bootstrap-check.js  postinstall.js
(+138 files in other folders)
